Saved data fixes + ingredients displays clarity improvements
- Add flying time potion
- Fix saved data recipe vs newly generated recipes logic
- Add recipe tooltip text
- Added more ingredient info to Abyssal Trove when interacted with twice
- Add the ability to add passive potion effects to tools and armor
- Re-enable Herbalists Lectern sound effects
- Fix some potion effects immediately expiring
- Bump version to 1.3.1